feat: Add auth/me endpoint
